    in
  - added libproxy-dev as build-dependecy; it's needed to build the GNOME
    support
  * debian/rules:
  - re-enable gtk-doc support, and enable GNOME support

  Changes borrowed from Ubuntu (thanks):
  * debian/control.in, libsoup-gnome2.4-dev:
  - also split dev package, and add nice description of what the GNOME
    support library is

 -- Gustavo Noronha Silva <kov@debian.org>  Thu, 05 Mar 2009 07:49:04 -0300

libsoup2.4 (2.25.91-1) experimental; urgency=low

  * New upstream development release

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 17 Feb 2009 16:53:14 -0300

libsoup2.4 (2.24.3-2) unstable; urgency=low

  * Upload to unstable.

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 17 Feb 2009 15:13:27 -0300

libsoup2.4 (2.24.3-1) experimental; urgency=low

  * New upstream bugfix release.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 13 Jan 2009 09:25:05 +0100

libsoup2.4 (2.24.2.1-1) experimental; urgency=low

  * New upstream bugfix release.

 -- Sebastian Dröge <slomo@debian.org>  Thu, 27 Nov 2008 20:39:30 +0100

libsoup2.4 (2.24.1-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/libsoup2.4-doc.doc-base: fix section.

  [ Andreas Henriksson ]
  * New upstream release.
    - drop patches/01_default-auth-digest-algorithm.patch, applied upstream.

  [ Josselin Mouette ]
  * Make the dependency on libglib2.0-dev match the build-dependency.
  * Bump shlibs to 2.23.91.
  * Fix spelling of GTK+ in the descriptions.

 -- Josselin Mouette <joss@debian.org>  Sun, 16 Nov 2008 18:38:32 +0100

libsoup2.4 (2.4.1-2) unstable; urgency=low

  * debian/patches/01_default-auth-digest-algorithm.patch:
    + Patch from upstream SVN to use MD5 as default auth digest algorithm
      if the server doesn't provide one.
  * debian/control.in:
    + Update Standards-Version to 3.8.0, no additional changes needed.

 -- Sebastian Dröge <slomo@debian.org>  Fri, 01 Aug 2008 11:29:21 +0200

libsoup2.4 (2.4.1-1) unstable; urgency=low
