@@ -6,7 +6,7 @@ SOUP_AGE := $(shell grep '^SOUP_AGE=' configure.in | sed -e 's/SOUP_AGE=//g')
 SOUP_SOVERSION := $(shell expr $(SOUP_CURRENT) - $(SOUP_AGE))
 endif
 
-SHLIBS := libsoup2.4-${SOUP_SOVERSION} (>= 2.23.91)
+SHVER := 2.25.91
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/rules/utils.mk
@@ -18,6 +18,9 @@ include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 GNOME_MODULE := libsoup
 
 DEB_SHLIBDEPS_INCLUDE_libsoup2.4-dev += debian/libsoup2.4-${SOUP_SOVERSION}/usr/lib
-DEB_DH_MAKESHLIBS_ARGS_ALL += -V'$(SHLIBS)'
+DEB_SHLIBDEPS_INCLUDE_libsoup-gnome2.4-dev += debian/libsoup-gnome2.4-${SOUP_SOVERSION}/usr/lib
+DEB_DH_MAKESHLIBS_ARGS_libsoup2.4-1 += -V'libsoup2.4-${SOUP_SOVERSION} (>= $(SHVER))'
+DEB_DH_MAKESHLIBS_ARGS_libsoup-gnome2.4-1 += -V'libsoup-gnome2.4-${SOUP_SOVERSION} (>= $(SHVER))'
+
 DEB_CONFIGURE_EXTRA_FLAGS += --enable-gtk-doc
 
