@@ -12,6 +12,8 @@ libsoup2.4 (2.25.91-2) UNRELEASED; urgency=low
   * debian/control.in, libsoup-gnome2.4-dev:
   - also split dev package, and add nice description of what the GNOME
     support library is
+  * debian/rules:
+  - correctly set shlib arguments for the various packages
 
  -- Gustavo Noronha Silva <kov@debian.org>  Thu, 05 Mar 2009 07:49:04 -0300
 
